# model-builder

./: .gitignore  Cargo.toml  docker-compose.yml  readme.md
.github/workflows/: general-rust-ci.yml  python-workflow.yml
common/: Cargo.toml
common/src/: lib.rs  read_file.rs
common/src/pattern/: string_pattern.rs
connectome_common/: .gitignore  Cargo.toml  pyproject.toml
connectome_common/python/: main.py
connectome_common/src/: arc_model.rs  example.txt  graph_builder.rs  input.rs  lib.rs  model_builder.rs  pattern.rs  read_file.rs  worker.rs
connectome_common/src/arc_model/: connection.rs  graph_change_request.rs  model.rs  model_trait.rs  node.rs  node_type.rs
connectome_common/src/graph_builder/: graph_builder_trait.rs
connectome_common/src/model_builder/: model_builder_base.rs  model_builder_trait.rs  model_builder_type.rs
connectome_common/src/pattern/: inner_iterable.rs  longest_path.rs
connectome_common/tests/: graph_builder_step_test.rs
connectome_graph/: Cargo.toml
connectome_graph/db-seed/: simple.tp
connectome_graph/files_to_read/: first.txt
connectome_graph/src/: graph_db_connection.rs  input.rs  main.rs  model_builder.rs  pattern.rs  read_file.rs
connectome_python_binding/: .gitignore  Cargo.toml  pyproject.toml  requirements.txt
connectome_python_binding/python/: main.py
connectome_python_binding/src/: lib.rs
